<?xml version="1.0" encoding="utf-8"?><!-- activity_main.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/nic"
        app:titleTextColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/button_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:text="@string/data_with_room" />

    <Button
        android:id="@+id/button_api"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_room"
        android:layout_marginTop="16dp"
        android:text="@string/data_with_api" />

</RelativeLayout>

